# mslearn-ai-language

./: .gitignore  README.md  _config.yml  index.md  mslearn-ai-language-1.sln  mslearn-ai-language.generated.sln  mslearn-ai-language.sln
.github/workflows/: voice-live-web-files.yml
Instructions/: 05-extract-custom-entities.md
Instructions/Exercises/: 01-analyze-text.md  02-language-agent.md  02-qna.md  03-gen-ai-speech.md  03-language-understanding.md  03-translate-text.md  04-azure-speech.md  04-gen-ai-speech.md  04-speech.md  04-text-classification.md  05-azure-speech-mcp.md  05-azure-speech.md  05-extract-custom-entities.md  06-azure-speech-mcp.md  06-translate-text.md  06-voice-live-agent.md  07-speech.md  07-translation.md  07b-speech-foundry.md  08-translate-speech.md  09-audio-chat.md
Instructions/Labs/: 01-analyze-text.md  02-qna.md  03-language-understanding.md  03b-clu-app.md  04-text-classification.md  05-extract-custom-entities.md  06-translate-text.md  07-speech.md  08-translate-speech.md  09-audio-chat.md  (+2 more)
Labfiles/11-voice-live-agent/python/: .dockerignore  .gitignore  Dockerfile  README.md  azdeploy.sh  azure.yaml  flask_app.py  main.bicep  pyproject.toml  readme.md  requirements.txt
Labfiles/11-voice-live-agent/python/infra/: ai-foundry.bicep  main.parameters.json
Labfiles/11-voice-live-agent/python/src/: __init__.py  flask_app.py
Labfiles/11-voice-live-agent/python/src/static/: app.js
Labfiles/11-voice-live-agent/python/static/: style.css
Labfiles/11-voice-live-agent/python/templates/: index.html
_layouts/: default.html
(+125 files in other folders)
