[project]
name = "real-time-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JeffKoMS", email = "jeffko@microsoft.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.18",
    "azure-core>=1.35.0",
    "azure-identity==1.22.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "cryptography==44.0.3",
    "pycparser==2.22",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "azure-ai-voicelive==1.0.0b5",
    "Flask>=3.0.0,<4.0.0",
]

[project.scripts]
# Short names for uv run 
web = "src.flask_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["."]
